2009-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/ImageCopy.cpp: small patch to deal 
	correctly with PixelMono16 type on big-endian systems.
	Thanks to Giovanni Saponaro for testing on Mac OSX (PPC).

2009-06-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/cmd_yarp.dox: update documentation for yarp 
	companion program for commands "yarp where/detect/conf".

	* src/libYARP_OS/src/Companion.cpp: add "yarp detect" command
	to scan for nameserver in a controlled way, and give
	debugging tips for when problems arise..

	* src/libYARP_OS/src/NameClient.cpp: stop ports from 
	automatically scanning for nameserver if they cannot find it.

2009-06-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Run.cpp: fix some small problems with using
	g++ on win32.

2009-06-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Contact.h: tag const methods
	as such.

2009-06-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/NameServer.h: add hook to
	allow reuse of fallback multicast name server

2009-06-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: fix bug in smartAdd() method 
	that failed to correctly interpret sequences with multiple periods
	as strings (e.g. IP addresses).

	* src/libYARP_OS/harness/BottleTest.cpp: add test for correct
	interpretation of IPv4 addresses as strings.
		

2009-06-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PortReaderBufferTest.cpp: mistake
	in test: messages in checkCallback need to be send with "strict"
	flag set, to be sure they don't get dropped.  Thanks to
	Alejandro R. Mosteo for drawing attention to PortReaderBufferTest
	problem.

	* src/libYARP_OS/include/yarp/os/impl/McastCarrier.h: allocate
	global mcast election object only if mcast is actually used.
	ACE's hash objects are quite large!

2009-06-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
